--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "faunadb": "^4.0.0",
     "graphql": "^15.4.0",
     "graphql-request": "^3.3.0"
   }
