--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "bignumber.js": "^9.0.1",
     "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "faunadb": "^4.0.0",
     "graphql": "^15.4.0",
-    "graphql-request": "^3.3.0"
+    "graphql-request": "^3.3.0",
+    "public-protos-js": "git+https://github.com/buycoinsafrica/protos-js.git"
   }
 }
